--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <head>
 
     <title>DashBoard</title>
-    {{>indexfunctions}}
+   
 </head>
 
 <h1 class="page-header">Dashboard</h1>
@@ -21,7 +21,7 @@
                 <div class="col-md-6">
                      <div ><a href="/favlocation"><img src="/img/png/placeslogoweb.png" alt="maps"></a></div>
                      <h1 id="dash-headers"><a href="/favlocation">Click To View Your Saved Locations</a></h1>        
-                    <div  ><a href="/favlocation"><img class="image2 " id="fav-photo" data-bind="attr: {src:photo}" alt="messages"/></a></div>
+                    <div  ><a href="/favlocation"><img class="image2 " id="index-photo" data-bind="attr: {src:indexPhoto}" alt="messages"/></a></div>
                 </div>
 
                 
