--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -56,5 +56,7 @@
 </script>
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js'></script>
 <script src="/js/mapfunc.js"></script>
-<!--<script src="/js/indexfunc.js"></script>
-<script src="/js/favfunc.js"></script> -->
+<script src="/js/loadData.js"></script>
+<script src="/js/indexfunc.js"></script>
+<script src="/js/LocationViewModel.js"></script>
+<!--<script src="/js/indexfunc.js"></script>-->
