--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -50,12 +50,11 @@
     window.jQuery || document.write('<script src="/js/vendor/jquery-1.12.0.min.js"><\/script>')
 
 </script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASBPr5sRT2E6DcIpLZmtNwFm0S4A0RCkk&libraries=places,drawing,geometry&callback=initMap"
-    async defer>
+<script src="/js/mapfunc.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASBPr5sRT2E6DcIpLZmtNwFm0S4A0RCkk&libraries=places,drawing,geometry&callback=initMap">
 
 </script>
-<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js'></script>
-<script src="/js/mapfunc.js"></script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js' ></script>
 <script src="/js/loadData.js"></script>
 <script src="/js/indexfunc.js"></script>
 <script src="/js/LocationViewModel.js"></script>
