--- a/views/partials/favfunctions.handlebars
+++ b/views/partials/favfunctions.handlebars
@@ -1,89 +1,1 @@
-<script type="text/javascript">
-    var gridPhotoModel = function (photo) {
-        console.log(photo);
-        this.photo = ko.observable(photo);
-    }
-
-    function FavLocation() {
-        var self = this;
-        self.location = ko.observable();
-        self.title = ko.observable();
-        self.address = ko.observable();
-        self.phone = ko.observable();
-        self.favid = ko.observable();
-        self.photo = ko.observable();
-        self.savedLocations = ko.observableArray();
-
-    };
-
-
-
-
-
-
-    function getPlacesInfo(favList, location) {
-        var innerHTML = document.getElementById('table');
-        var service = new google.maps.places.PlacesService(innerHTML);
-        var locaddress;
-        var locphone;
-        var loctitle;
-        var id = 1;
-        console.log("test:2 fav list has " + favList.length + " items in it");
-        console.log(favList);
-
-
-        for (i = 0; i < favList.length; i++) {
-
-
-            var loc = favList[i];
-            var favTile = favList[0];
-            console.log(loc.markerID);
-
-            service.getDetails({
-                placeId: loc.markerID
-            }, function (place, status) {
-                if (status === google.maps.places.PlacesServiceStatus.OK) {
-
-                    if (place.name) {
-                        loctitle = place.name;
-                    }
-
-                    if (place.formatted_address) {
-                        locaddress = place.formatted_address;
-                    }
-                    if (place.formatted_phone_number) {
-                        locphone = place.formatted_phone_number;
-                    }
-                    if (place.photos) {
-                        var photo = place.photos[0].getUrl(
-                            { maxHeight: 500, maxWidth: 700 });
-                    }
-                    var location = {
-                        title: loctitle,
-                        address: locaddress,
-                        phone: locphone,
-                        photo: photo,
-                        favid: id
-                    }
-                    id += 1;
-                    FavLocation.location(location);
-                    FavLocation.title(location.title);
-                    FavLocation.address(location.address);
-                    FavLocation.phone(location.phone);
-                    FavLocation.photo(location.photo);
-                    FavLocation.favid(location.favid);
-                    FavLocation.savedLocations.push(location);
-                };
-            });
-        };
-
-        ko.applyBindings(FavLocation);
-    };
-
-
-
-    function getPlacePhoto(photo) {
-        ko.applyBindings(new gridPhotoModel(photo));
-    };
-
-</script>
+<script src="/js/LocationViewModel.js"></script>
