--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -38,15 +38,15 @@
     window.jQuery || document.write('<script src="/js/vendor/jquery-1.12.0.min.js"><\/script>')
 
 </script>
-<script src="/js/loadData.js"></script>
+<script src="/js/loadData.js" ></script>
 
 
-
+<script src="/js/mapfunc.js" ></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASBPr5sRT2E6DcIpLZmtNwFm0S4A0RCkk&libraries=places,drawing,geometry&callback=initMap"
-    async defer>
+async defer>
 </script>
-
-<script src="/js/mapfunc.js"></script>
+<script src="/js/indexfunc.js" defer></script>
+<script src="/js/LocationViewModel.js" defer></script>
 
 
 
