Fix:  Fixed call back issue for Favorite Locations list
The previous callback issues regarding the google places service call causing the Favorite Locations list not to render has been fixed.  The getPlacesInfo has been moved out to its own function and the savedLocations() observable array as been moved to a global object and out of the FavListModel.

Resolves: Bug reported on 7/24/17 regarding Favorite Locations

--- a/views/favPlaces.handlebars
+++ b/views/favPlaces.handlebars
@@ -32,7 +32,7 @@
 
 
                         <tr>
-                            <td id="number" data-bind="text:favid" </td>
+                                <td id="number" data-bind="text:favid" </td>
                                 <td id="title" data-bind="text:title "></td>
                                 <td id="addressdiv" data-bind="text:address "></td>
                                 <td id="phonediv" data-bind="text:phone "></td>
@@ -52,7 +52,8 @@
         <div class="col-md-6">
             <div class="center">
 
-                <div><img class="fav-preview" data-bind="attr: {src:photo}" alt="messages" /></div>
+                <div data-bind="foreach: savedLocations">
+                    <img id="photo" class="fav-preview" data-bind="attr: {src:photo}" alt="messages" /></div>
 
             </div>
         </div>
