--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -45,8 +45,8 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASBPr5sRT2E6DcIpLZmtNwFm0S4A0RCkk&libraries=places,drawing,geometry&callback=initMap"
 async defer>
 </script>
-<script src="/js/indexfunc.js" defer></script>
-<script src="/js/LocationViewModel.js" defer></script>
+<script src="/js/indexfunc.js" ></script>
+<script src="/js/LocationViewModel.js" ></script>
 
 
 
