fix: added info for eached saved location.
Added info for each location on the saved locations list page. Still need to fix every picture rendering at the same time. only want pic and info of location clicked. Working out bugs for index page. verified the observables are being stored as google objects, not their value once ran thru google places service call.

--- a/views/favPlaces.handlebars
+++ b/views/favPlaces.handlebars
@@ -2,7 +2,6 @@
 
     <title>Favorite Places</title>
 
-{{>favfunctions}}
 
 </head>
 
@@ -28,7 +27,7 @@
                         </tr>
                     </thead>
                      <!--Todo: Generate table body -->
-                   <tbody id="table"  data-bind="foreach: FavListVM.savedLocations">
+                   <tbody id="table" data-bind="foreach: FavListVM.savedLocations">
 
 
                         <tr>
@@ -54,10 +53,15 @@
                 
                 <div data-bind="foreach: FavListVM.savedLocations ">
                     
-                    <div data-bind="visible: FavListVM.showPic" >
-                    <img id="photo" class="fav-preview" data-bind="if: FavListVM.showPic , attr: {src: FavListVM.photo} " alt="messages"/>
+                    <div >
+                        <div>
+                            <h1 data-bind="text: title"></h1>
+                        </div>
+                        <img id="photo" class="fav-preview" data-bind="attr: {src:photo} " alt="messages"/>
+                        <div id="rating" data-bind="text:rating"></div>
+                       
+                        <div id="reviews" data-bind="text: reviews"></div>
                     </div>
-               
                 </div>
             </div>
         </div>
